tests/fixtures/qml/reject/connections.qml
import QtQuick 2.15

Item {
    width: 100
    height: 100

    Connections {
        target: parent
    }
}
